# SWAN

./: pyproject.toml
swan/: 2023_analysis.ipynb  preprocessing.ipynb  regression.ipynb  timeseries.ipynb
swan/data/: 2023_correlations.csv  MainSheet-Table 1.csv  PLACES__County_Data__GIS_Friendly_Format___2020_release_filtered.csv  PLACES__County_Data__GIS_Friendly_Format___2021_release_filtered.csv  PLACES__County_Data__GIS_Friendly_Format___2022_release_filtered.csv  PLACES__County_Data__GIS_Friendly_Format___2023_release_20231107_correlations.csv  PLACES__County_Data__GIS_Friendly_Format___2023_release_20231107_filtered.csv  merged_and_aggregated.csv  swan_fast_gdp_workout.xlsx
